create parrent category

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -890,7 +890,9 @@ body{
 		}
 		&__input-wrap{
 			display: flex;
-			align-items: center;
+			flex-direction: column;
+			margin-right: 0 !important;
+			margin-left: 0 !important;
 			&:not(:last-child){
 				margin-bottom: 11px;
 			}
